# tex_to_speech_flutter

./: CODEOWNERS  CONTRIBUTING.md  README.md  REPO_SETUP.md  SETUP_NOTES.md  generate_update.sh
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: licenses.yml  main.yml
tex_to_speech/: .metadata  CHANGELOG.md  README.md  flutter_rust_bridge.yaml  pubspec.yaml
tex_to_speech/android/: build.gradle  settings.gradle
tex_to_speech/android/src/main/: AndroidManifest.xml
tex_to_speech/example/: README.md  pubspec.yaml
tex_to_speech/example/android/app/: build.gradle.kts
tex_to_speech/example/integration_test/: simple_test.dart
tex_to_speech/example/ios/Runner/: Info.plist
tex_to_speech/example/ios/Runner.xcodeproj/: project.pbxproj
tex_to_speech/example/lib/: main.dart
tex_to_speech/example/linux/: CMakeLists.txt
tex_to_speech/example/web/: index.html  manifest.json
tex_to_speech/example/windows/: CMakeLists.txt
tex_to_speech/ios/: tex_to_speech.podspec
tex_to_speech/lib/: tex_to_speech.dart
tex_to_speech/lib/pkg/: package.json  tex_to_speech.js
tex_to_speech/linux/: CMakeLists.txt
tex_to_speech/macos/: tex_to_speech.podspec
tex_to_speech/pkg/: tex_to_speech.js
tex_to_speech/rust/: Cargo.toml  cargokit.yaml
tex_to_speech/rust/src/: frb_generated.rs
tex_to_speech/rust/src/api/: mod.rs
tex_to_speech/windows/: CMakeLists.txt
tex_to_speech_core/: Cargo.toml
tex_to_speech_core/src/: lib.rs  main.rs
tex_to_speech_core/src/errors/: mod.rs
(+14 files in other folders)
