[package]
name = "tex_to_speech"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
anyhow = "1.0.100"
flutter_rust_bridge = "=2.11.1"
tex_to_speech_core = { path = "../../tex_to_speech_core" }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }
